Recreated EF Objects and Generated API Controllers

--- a/src/WebExpenseTracker-WEB/Views/Shared/_Layout.cshtml
+++ b/src/WebExpenseTracker-WEB/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using System.Threading.Tasks
+@using Microsoft.ApplicationInsights.Extensibility
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8" />
@@ -15,7 +17,6 @@
                   asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
             <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
         </environment>
-        @Html.ApplicationInsightsJavaScript(TelemetryConfiguration)
     </head>
     <body>
         <div class="navbar navbar-inverse navbar-fixed-top">
